Fix: single editor doesn't stretch to full height (#728)
* Fix: single editor doesn't stretch to full height

* Fix: remove redundant selectors

--- a/edit/edit.css
+++ b/edit/edit.css
@@ -777,8 +777,9 @@ html:not(.usercss) .usercss-only,
   color: #888;
 }
 
-#sections .single-editor,
-#sections > .single-editor:first-child {
+/* FIXME: remove the ID selector */
+#sections .single-editor {
+  height: 100%;
   margin: 0;
   padding: 0;
   display: flex;
